<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OpenSpaces</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Sign Up</string>

    <string name="characters_length_placeholder">From %1$d to %2$d characters</string>
    <string name="characters_length_error_placeholder">Must be %1$d to %2$d characters</string>


    <!--errors-->
    <string name="user_not_found">User not found</string>
    <string name="unknown_error">Unknown error</string>
    <string name="captcha_image_description">captcha image</string>
    <string name="captcha_input_code">Input code</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="add_account">Add account</string>
    <string name="delete_description">delete</string>
    <string name="ok" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="remove_account">Are you sure?</string>
    <string name="remove_account_description">Remove account?</string>
    <string name="like">like</string>

    <string name="advert_date_now">только что</string>

    <string name="advert_date_minutes_ago_one">%1$s минуту</string>
    <string name="advert_date_minutes_ago_few">%1$s минуты</string>
    <string name="advert_date_minutes_ago_many">%1$s минут</string>
    <string name="advert_date_minutes_ago_other">%1$s минуты</string>

    <string name="advert_date_hour_ago_one">%1$s час</string>
    <string name="advert_date_hour_ago_few">%1$s часа</string>
    <string name="advert_date_hour_ago_many">%1$s часов</string>
    <string name="advert_date_hour_ago_other">%1$s часа</string>

    <string name="advert_date_day_yesterday">Вчера %1$s</string>

    <string name="advert_date_minutes_left_one">%1$s минуту</string>
    <string name="advert_date_minutes_left_few">%1$s минуты</string>
    <string name="advert_date_minutes_left_many">%1$s минут</string>
    <string name="advert_date_minutes_left_other">%1$s минуты</string>

    <string name="advert_date_hour_left_one">%1$s час</string>
    <string name="advert_date_hour_left_few">%1$s часа</string>
    <string name="advert_date_hour_left_many">%1$s часов</string>
    <string name="advert_date_hour_left_other">%1$s часа</string>

    <string name="today">Сегодня</string>
    <string name="last_visit">был %1$s</string>
    <string name="load_configuration">Load configuration</string>
    <string name="error_loading_configuration_file">Error loading configuration file</string>

    <string name="time_holder">• %1$s</string>
    <string name="reply">Reply</string>
    <string name="retry">Retry</string>
    <string name="error_while_loading_data">Error while loading data</string>
    <string name="change_theme">Change theme</string>
    <string name="restart_to_apply_changes">Restart to apply theme</string>
    <string name="menu">Menu</string>
    <string name="type_a_comment">Type a comment</string>
    <string name="reply_to_placeholder">Reply to %1$s</string>
    <string name="close">close</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="guestbook">Guest book</string>
    <string name="editing_comment">Editing</string>
    <string name="lenta">Lenta</string>
    <string name="profile">Profile</string>
    <string name="journal">Journal</string>
    <string name="mail">Mail</string>
    <string name="auth_required">Auth required</string>
    <string name="image">Image</string>
    <string name="change_account">Change account</string>
    <string name="switch_theme">Switch theme</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Logout?</string>
    <string name="no_items_yet">No items yet</string>
    <string name="all_records">All</string>
    <string name="new_records">New</string>
    <string name="filter">Filter</string>
    <string name="login_by_qr_code">Login by QR code</string>
    <string name="blog">Blog</string>
</resources>