<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/navigation_guest_book"
        android:title="@string/guestbook"
        android:icon="@drawable/book_open"/>

    <item android:id="@+id/navigation_blogs"
        android:title="@string/blog"
        android:icon="@drawable/newspaper_variant_outline"/>

    <item android:id="@+id/navigation_change_account"
        android:title="@string/change_account"
        android:icon="@drawable/account_supervisor_circle_outline"/>

    <item android:id="@+id/navigation_logout"
        android:title="@string/logout"
        android:icon="@drawable/logout_variant"/>

    <item android:id="@+id/navigation_switch_theme"
        android:title="@string/switch_theme"
        app:actionLayout="@layout/layout_switch"
        android:icon="@drawable/theme_light_dark"/>

</menu>