<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:contentPadding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/captchaImage"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/captcha_image_description" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/codeLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/captchaImage"
                android:layout_margin="16dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:helperText=" ">

                <com.di7ak.openspaces.widget.CompletableTextInput
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/captcha_input_code"
                    android:maxLines="1"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSend"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/codeLayout"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/button_state_text_color"
                app:backgroundTint="@color/button_state_color"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnSend"
                android:layout_marginStart="48dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="48dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/button_state_outlined_text_color"
                app:cornerRadius="20dp" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>