<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:contentPadding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                tools:src="@drawable/account_remove_outline"
                android:contentDescription="@string/captcha_image_description" />

            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/icon"
                android:gravity="center"
                tools:text="Title"/>

            <TextView
                android:id="@+id/subtitle"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_below="@id/title"
                tools:text="Subtitle"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirm"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/subtitle"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginTop="10dp"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/button_state_text_color"
                app:backgroundTint="@color/button_state_color"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnConfirm"
                android:layout_marginStart="48dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="48dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/button_state_outlined_text_color"
                app:cornerRadius="20dp" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>