<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="5dp"
    android:src="?attr/selectableItemBackground">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/account_plus_outline" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/date"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TextView" />

    <TextView
        android:id="@+id/reply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="13sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:text="@string/reply_to_placeholder"
        android:drawablePadding="5dp" />

    <ImageView
        android:id="@+id/mainAttach"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@+id/reply"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        app:srcCompat="@drawable/play_circle_outline"
        app:layout_constraintBottom_toBottomOf="@+id/mainAttach"
        app:layout_constraintEnd_toEndOf="@id/mainAttach"
        app:layout_constraintStart_toStartOf="@id/mainAttach"
        app:layout_constraintTop_toTopOf="@+id/mainAttach"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@+id/mainAttach"
        tools:text="Content" />

    <ImageView
        android:id="@+id/btnLike"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/like"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:tint="@color/buttonNormal"
        app:srcCompat="@drawable/thumb_up_outline"
        app:layout_constraintEnd_toStartOf="@id/likes"
        app:layout_constraintTop_toBottomOf="@+id/content"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnLike"
        app:layout_constraintEnd_toStartOf="@id/btnDislike"
        app:layout_constraintTop_toTopOf="@+id/btnLike"
        tools:text="66" />

    <ImageView
        android:id="@+id/btnDislike"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/like"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:tint="@color/buttonNormal"
        app:srcCompat="@drawable/thumb_down_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <TextView
        android:id="@+id/btnReply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/btnLike"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toTopOf="@+id/btnLike"
        android:padding="0dp"
        android:background="?selectableItemBackground"
        android:textColor="@color/colorPrimary"
        android:text="@string/reply"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintTop_toTopOf="@+id/name"
        tools:text="45" />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/chevron_down"
        android:background="?selectableItemBackground"
        app:tint="@color/buttonNormal"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name"
        tools:text="45"
        android:contentDescription="@string/menu" />


</androidx.constraintlayout.widget.ConstraintLayout>